manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-webapp
  labels:
    name: fastapi-webapp
spec:
  ingressClassName: external-ingress-nginx-class
  rules:
  - host: fastapi.namutest.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: active-fastapi-webapp
            port: 
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: active-fastapi-webapp
spec:
  selector:
    app: fastapi-webapp
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: preview-fastapi-webapp
spec:
  selector:
    app: fastapi-webapp
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
